--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
         <article>
             <h1>we have da best leaks !!!!! !!!! ! !! !!</h1>
         </article>
+<style>
+.body {
+font-family: Arial;
+background-color: #00000;
+align-items: center;
+}
+.h1 {
+color: white;
+}
+</style>
     </body>
 </html>
